--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="Light_Green_50">#F1F8E9</color>
+    <color name="Light_Green_200">#C5E1A5</color>
+    <color name="Light_Green_700">#689F38</color>
+    <color name="Light_Green_900">#33691E</color>
+    <color name="teal_100">#CCFF90</color>
+    <color name="teal_400">#76FF03</color>
+
 </resources>
