--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -16,7 +16,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="50dp"
-        android:id="@+id/tv_banner"
+        android:id="@+id/tv_register_banner"
         />
 
     <TextView
@@ -27,79 +27,56 @@
         android:textAlignment="center"
         android:textStyle="italic"
         android:fontFamily="sans-serif-black"
-        app:layout_constraintTop_toBottomOf="@id/tv_banner"
+        app:layout_constraintTop_toBottomOf="@id/tv_register_banner"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="10dp"
-        android:id="@+id/tv_banner_description"
+        android:id="@+id/tv_register_banner_description"
         />
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_login"
         android:textSize="25sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_banner_description"
+        app:layout_constraintTop_toBottomOf="@id/tv_register_banner_description"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_margin="20dp"
+        android:layout_marginTop="30dp"
         android:ems="10"
-        android:id="@+id/et_email"
+        android:id="@+id/et_register_email"
         />
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_password"
         android:textSize="25sp"
-        app:layout_constraintTop_toBottomOf="@id/et_email"
+        app:layout_constraintTop_toBottomOf="@id/et_register_email"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_margin="20dp"
+        android:layout_marginTop="30dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:id="@+id/et_password"
+        android:id="@+id/et_register_password"
         />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/et_password"
+        android:layout_width="350dp"
+        android:layout_height="70dp"
+        app:layout_constraintTop_toBottomOf="@id/et_register_password"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_margin="35dp"
+        android:layout_marginTop="25dp"
         android:backgroundTint="@color/Light_Green_700"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
         style="?attr/materialButtonOutlinedStyle"
-        android:text="@string/btn_login"
-        android:id="@+id/btn_login"
+        android:text="@string/btn_register"
+        android:id="@+id/btn_register"
         />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_forgot_password"
-        android:text="@string/tv_forgot_password"
-        android:textSize="15sp"
-        style="bold"
-        app:layout_constraintTop_toBottomOf="@id/btn_login"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="50dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_register"
-        android:text="@string/tv_register"
-        android:textSize="15sp"
-        style="bold"
-        app:layout_constraintTop_toTopOf="@id/tv_forgot_password"
-        app:layout_constraintLeft_toRightOf="@id/tv_forgot_password"
-        android:layout_marginLeft="100dp"
-        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
