--- a/app/src/main/res/layout/fragment_logged_in.xml
+++ b/app/src/main/res/layout/fragment_logged_in.xml
@@ -1,27 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout android:layout_width="match_parent"
+<RelativeLayout
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:openDrawer="start">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary" />
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <TextView
             android:id="@+id/fragment_loggedin_loggedInUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/toolbar"
+            android:layout_alignParentTop="true"
             android:textAlignment="center"
             android:gravity="center_horizontal"
             android:text="ASDSDASDASDASDASDASD"/>
@@ -31,17 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Log Out"
-
             android:layout_below="@id/fragment_loggedin_loggedInUser"/>
-    </RelativeLayout>
 
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:id="@+id/nav_view"
-        app:headerLayout="@layout/header_layout"
-        app:menu="@menu/drawer_menu"/>
-
-</androidx.drawerlayout.widget.DrawerLayout>
+</RelativeLayout>
 
