--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            android:layout_alignParentTop="true"/>
+            android:layout_alignParentTop="true"
+            />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -39,7 +40,6 @@
             <fragment
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
                 app:defaultNavHost="true"
                 app:navGraph="@navigation/nav_graph"
                 android:id="@+id/activity_main_navHostFragment"
