mid commit work on login and signUp fragments

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="Light_Green_200">#C5E1A5</color>
     <color name="Light_Green_700">#689F38</color>
     <color name="Light_Green_900">#33691E</color>
-    <color name="teal_100">#CCFF90</color>
-    <color name="teal_400">#76FF03</color>
+    <color name="teal_100">#7B8F62</color>
+    <color name="teal_400">#CFFB87</color>
 
     <color name="colorPrimary">#1F5BF3</color>
     <color name="colorPrimaryDark">#0947E8</color>
