--- a/app/src/main/res/layout/fragmant_register.xml
+++ b/app/src/main/res/layout/fragmant_register.xml
@@ -1,81 +1,151 @@
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/loginCard"
-    app:cardCornerRadius="@dimen/loginCardRadius"
-    android:elevation="5dp"
-    android:layout_gravity="center"
-    android:layout_marginTop="@dimen/loginViewsMargin"
-    android:layout_marginBottom="@dimen/loginViewsMargin"
-    android:background="@color/whiteCardColor"
-    android:clickable="true"
-    android:focusable="true"
-    android:checkable="true">
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        style="@style/linearParent"
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textSize="60sp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/icon_bold"
+        android:id="@+id/iv_banner"
+        />
+
+    <TextView
+        android:id="@+id/tv_banner_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-black"
+        android:text="@string/banner_description"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_banner" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_banner_description"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="20dp"
+        app:cardCornerRadius="@dimen/loginCardRadius"
+        android:elevation="5dp"
         android:layout_gravity="center"
-        android:padding="@dimen/loginViewsMargin">
-
-        <TextView
-            style="@style/headerTextPrimary"
-            android:text="@string/tv_register_capital"
-            android:layout_marginTop="@dimen/loginViewsMargin"/>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/parent"
-            android:layout_marginTop="@dimen/signup_text_margin_top">
-            <EditText
-                style="@style/modifiedEditText"
-                android:inputType="text"
-                android:maxLines="1"
-                android:hint="@string/hint_fullName"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/parent"
-            android:layout_marginTop="@dimen/signup_text_margin_top">
-            <EditText
-                style="@style/modifiedEditText"
-                android:inputType="text"
-                android:maxLines="1"
-                android:hint="@string/hint_phoneNumber"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/parent"
-            android:layout_marginTop="@dimen/signup_text_margin_top">
-            <EditText
-                style="@style/modifiedEditText"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:hint="@string/hint_login"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/parent"
-            android:layout_marginTop="@dimen/signup_text_margin_top">
-            <EditText
-                style="@style/modifiedEditText"
-                android:hint="@string/hint_password"
-                android:maxLines="1"
-                android:inputType="textPassword"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
+        android:backgroundTint="@color/Light_Green_50"
+        android:id="@+id/card_signUp">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:background="@drawable/login_button_bk"
-            android:layout_gravity="center"
-            android:text="@string/tv_register" />
+            android:layout_margin="10dp"
+            >
+            <EditText
+                android:id="@+id/et_register_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:ems="10"
+                android:hint="@string/hint_login"
+                android:textSize="20sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:imeOptions="actionNext"
+                tools:ignore="MissingConstraints" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/hint_password"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/et_register_email"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_margin="20dp"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="textPassword"
+                android:id="@+id/et_register_password"
+                />
+            <EditText
+                android:id="@+id/et_register_fullName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:ems="10"
+                android:hint="@string/hint_fullName"
+                android:textSize="20sp"
+                android:imeOptions="actionNext"
+                app:layout_constraintTop_toBottomOf="@id/et_register_password"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+
+                tools:ignore="MissingConstraints" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/hint_phoneNumber"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/et_register_fullName"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:imeOptions="actionDone"
+                android:layout_margin="20dp"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:id="@+id/et_register_phoneNumber"
+                />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/et_register_phoneNumber"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_margin="35dp"
+                android:backgroundTint="@color/Light_Green_700"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                style="?attr/materialButtonStyle"
+                android:text="@string/btn_signUp"
+                android:id="@+id/btn_register"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>>
+
+    </androidx.cardview.widget.CardView>
+
 
         <TextView
-            style="@style/parent"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textColor="@color/primaryTextColor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_forgot_password"
+            android:layout_alignParentStart="true"
             android:text="@string/signup_login_hint"
-            android:layout_marginTop="@dimen/loginViewsMargin"/>
+            android:textSize="15sp"
+            style="bold"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="25dp"
+            app:layout_constraintTop_toBottomOf="@id/card_signUp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
 
-    </LinearLayout>
-</com.google.android.material.card.MaterialCardView>
+            />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
