--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
@@ -15,91 +17,117 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="50dp"
-        android:id="@+id/tv_banner"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/icon_bold"
+        android:id="@+id/iv_banner"
         />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/banner_description"
-        android:textSize="18sp"
-        android:textAlignment="center"
-        android:textStyle="italic"
-        android:fontFamily="sans-serif-black"
-        app:layout_constraintTop_toBottomOf="@id/tv_banner"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="10dp"
         android:id="@+id/tv_banner_description"
-        />
-
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_login"
-        android:textSize="25sp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-black"
+        android:text="@string/banner_description"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_banner" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tv_banner_description"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_margin="20dp"
-        android:ems="10"
-        android:id="@+id/et_email"
-        />
+        android:layout_marginTop="20dp"
+        app:cardCornerRadius="@dimen/loginCardRadius"
+        android:elevation="5dp"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/Light_Green_50"
+        android:id="@+id/card_login">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_margin="10dp"
+            >
+            <EditText
+                android:id="@+id/et_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:ems="10"
+                android:hint="@string/hint_login"
+                android:textSize="20sp"
+                android:imeOptions="actionNext"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
 
-    <EditText
+                tools:ignore="MissingConstraints" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/hint_password"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/et_email"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_margin="20dp"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:id="@+id/et_password"
+                />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/et_password"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_margin="35dp"
+                android:backgroundTint="@color/Light_Green_700"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                style="?attr/materialButtonStyle"
+                android:text="@string/btn_login"
+                android:id="@+id/btn_login"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>>
+
+    </androidx.cardview.widget.CardView>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_password"
-        android:textSize="25sp"
-        app:layout_constraintTop_toBottomOf="@id/et_email"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_margin="20dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:id="@+id/et_password"
-        />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/et_password"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_margin="35dp"
-        android:backgroundTint="@color/Light_Green_700"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        style="?attr/materialButtonStyle"
-        android:text="@string/btn_login"
-        android:id="@+id/btn_login"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_forgot_password"
-        android:text="@string/tv_forgot_password"
-        android:textSize="15sp"
-        style="bold"
-        app:layout_constraintTop_toBottomOf="@id/btn_login"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="50dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_register"
-        android:text="@string/tv_register"
-        android:textSize="15sp"
-        style="bold"
-        app:layout_constraintTop_toTopOf="@id/tv_forgot_password"
-        app:layout_constraintLeft_toRightOf="@id/tv_forgot_password"
-        android:layout_marginLeft="100dp"
-        />
-
-
+        android:layout_marginHorizontal="50dp"
+        android:orientation="horizontal"
+        android:paddingHorizontal="15dp"
+        app:layout_constraintTop_toBottomOf="@id/card_login">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_forgot_password"
+            android:layout_alignParentStart="true"
+            android:text="@string/tv_forgot_password"
+            android:textSize="15sp"
+            style="bold"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="25dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_register"
+            android:text="@string/tv_register"
+            android:textSize="15sp"
+            android:layout_alignParentEnd="true"
+            style="bold"
+            android:layout_centerInParent="true"
+            />
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
