--- a/app/src/main/res/layout/fragmant_register.xml
+++ b/app/src/main/res/layout/fragmant_register.xml
@@ -152,8 +152,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        style="?android:attr/progressBarStyleLarge"
+        style="@android:style/Widget.Material.ProgressBar.Large"
         android:visibility="gone"
+        tools:ignore="MissingConstraints"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
