--- a/app/src/main/res/layout/fragment_logged_in.xml
+++ b/app/src/main/res/layout/fragment_logged_in.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,6 +12,108 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.LoggedInFragment" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="@dimen/loginCardRadius"
+            android:elevation="5dp"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/Light_Green_50"
+
+            android:id="@+id/card_addRoute">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp">
+
+                        <EditText
+                            android:id="@+id/et_addRoute_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="20dp"
+                            android:ems="10"
+                            android:hint="@string/hint_add_route_name"
+                            android:imeOptions="actionNext"
+                            android:textSize="20sp"
+                            android:textAppearance="?attr/textAppearanceBody2"
+                            android:textColor="?android:attr/textColorSecondary"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            tools:ignore="MissingConstraints" />
+
+                        <EditText
+                            android:id="@+id/et_addRoute_description"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="20dp"
+                            android:ems="10"
+                            android:hint="@string/hint_add_route_description"
+                            android:imeOptions="actionNext"
+                            android:textSize="20sp"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/et_addRoute_name" />
+                        <MultiAutoCompleteTextView
+                            android:id="@+id/multiAutoCompleteTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="MultiAutoCompleteTextView"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/et_addRoute_description"/>
+                        <EditText
+                            android:id="@+id/et_register_fullName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="20dp"
+                            android:ems="10"
+                            android:hint="@string/hint_fullName"
+                            android:imeOptions="actionNext"
+                            android:textSize="20sp"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/et_addRoute_description"
+                            tools:ignore="MissingConstraints" />
+
+                        <EditText
+                            android:id="@+id/et_register_phoneNumber"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="20dp"
+                            android:ems="10"
+                            android:hint="@string/hint_phoneNumber"
+                            android:imeOptions="actionDone"
+                            android:textSize="20sp"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/et_register_fullName" />
+
+                        <Button
+                            android:id="@+id/btn_register"
+                            style="?attr/materialButtonStyle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="35dp"
+                            android:backgroundTint="@color/Light_Green_700"
+                            android:text="@string/btn_signUp"
+                            android:textColor="@color/white"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/et_register_phoneNumber" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                >
+
+        </androidx.cardview.widget.CardView>
+
+
 
 </RelativeLayout>
 
