--- a/app/src/main/res/layout/fragment_routes_list.xml
+++ b/app/src/main/res/layout/fragment_routes_list.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+   <ImageView android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:id="@+id/iv_routes_lists_header"
+       android:src="@drawable/icon_bold"
+       app:layout_constraintTop_toTopOf="parentparent"
+       app:layout_constraintRight_toRightOf="parent"
+       app:layout_constraintLeft_toLeftOf="parent"
+       tools:ignore="MissingConstraints"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_routes_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_routes_lists_header"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
