--- a/app/src/main/res/layout/fragment_routes_list.xml
+++ b/app/src/main/res/layout/fragment_routes_list.xml
@@ -9,7 +9,7 @@
        android:layout_height="wrap_content"
        android:id="@+id/iv_routes_lists_header"
        android:src="@drawable/icon_bold"
-       app:layout_constraintTop_toTopOf="parentparent"
+       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints"/>
