route cell design

--- a/app/src/main/res/layout/route_cell.xml
+++ b/app/src/main/res/layout/route_cell.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
-        <RelativeLayout android:layout_height="match_parent"
+    android:layout_height="120dp"
+    tools:ignore="MissingConstraints"
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="15dp"
+    >
+    <RelativeLayout android:layout_height="match_parent"
             android:layout_width="match_parent">
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/routes_list_cell_image"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:padding="5dp"
                 android:layout_margin="5dp"
                 app:shapeAppearanceOverlay="@style/circleImageView"
-                app:srcCompat="@drawable/ic_routes_24"
+                app:srcCompat="@drawable/default_route_image"
                 />
 
             <com.google.android.material.textview.MaterialTextView
@@ -25,6 +26,9 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/routes_list_cell_name"
                 android:text="Route Name"
+                android:maxLength="20"
+                android:ellipsize="end"
+                android:textStyle="bold"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
@@ -32,10 +36,14 @@
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLength="40"
+                android:maxLines="3"
+                android:maxWidth="150dp"
                 android:id="@+id/routes_list_cell_description"
                 android:text="Route description"
                 android:layout_marginLeft="10dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginTop="5dp"
                 android:textSize="15sp"
                 android:layout_below="@id/routes_list_cell_name"
                 android:layout_alignParentLeft="true" />
@@ -44,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/routes_list_cell_area"
                 android:text="Area"
+                android:textStyle="bold"
                 android:layout_marginRight="10dp"
                 android:layout_alignBaseline="@id/routes_list_cell_name"
                 android:layout_toLeftOf="@id/routes_list_cell_image"
@@ -59,6 +68,4 @@
                 />
         </RelativeLayout>>
 
-    </androidx.cardview.widget.CardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
