--- a/app/src/main/res/layout/fragment_logged_in.xml
+++ b/app/src/main/res/layout/fragment_logged_in.xml
@@ -15,7 +15,7 @@
             android:layout_gravity="center"
             android:backgroundTint="@color/Light_Green_50"
             android:id="@+id/card_addRoute"
-            android:visibility="gone">
+            android:visibility="visible">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="wrap_content"
@@ -104,10 +104,19 @@
                             android:layout_margin="20dp"
                             android:textColor="@color/white"
                             android:textSize="10sp"
-
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/sp_addRoute_difficulty" />
-
+                        <Button
+                            android:id="@+id/btn_add_route_image_picker"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/Light_Green_700"
+                            android:text="@string/btn_chooseImage"
+                            android:layout_margin="20dp"
+                            android:textColor="@color/white"
+                            android:textSize="10sp"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/btn_add_route_file_picker" />
                         <Button
                             android:id="@+id/btn_add_route_add"
                             style="?attr/materialButtonStyle"
@@ -121,7 +130,7 @@
                             android:textStyle="bold"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/btn_add_route_file_picker" />
+                            app:layout_constraintTop_toBottomOf="@id/btn_add_route_image_picker" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
