fix the route_cell.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="Light_Green_200">#C5E1A5</color>
     <color name="Light_Green_700">#689F38</color>
     <color name="Light_Green_900">#33691E</color>
+    <color name="Light_Gray">#F6FBF1</color>
     <color name="teal_100">#7B8F62</color>
     <color name="teal_400">#CFFB87</color>
 
