--- a/app/src/main/res/layout/route_cell.xml
+++ b/app/src/main/res/layout/route_cell.xml
@@ -7,17 +7,16 @@
     android:layout_height="120dp"
     tools:ignore="MissingConstraints"
     app:cardUseCompatPadding="true"
-    app:cardCornerRadius="15dp"
-    >
+    app:cardCornerRadius="15dp">
     <RelativeLayout android:layout_height="match_parent"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:background="@color/Light_Gray">
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/routes_list_cell_image"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:padding="5dp"
                 android:layout_margin="5dp"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 app:shapeAppearanceOverlay="@style/circleImageView"
                 app:srcCompat="@drawable/default_route_image"
                 />
@@ -27,46 +26,49 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/routes_list_cell_name"
                 android:text="Route Name"
+                android:layout_marginHorizontal="10dp"
                 android:maxLength="20"
                 android:ellipsize="end"
                 android:textStyle="bold"
-                android:layout_marginLeft="10dp"
+                android:textColor="@color/Light_Green_900"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
-                android:layout_alignParentLeft="true" />
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLength="40"
-                android:maxLines="3"
-                android:maxWidth="150dp"
-                android:id="@+id/routes_list_cell_description"
-                android:text="Route description"
-                android:layout_marginLeft="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginTop="5dp"
-                android:textSize="15sp"
-                android:layout_below="@id/routes_list_cell_name"
-                android:layout_alignParentLeft="true" />
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/routes_list_cell_area"
-                android:text="Area"
-                android:textStyle="bold"
-                android:layout_marginRight="10dp"
-                android:layout_alignBaseline="@id/routes_list_cell_name"
-                android:layout_toLeftOf="@id/routes_list_cell_image"
-                />
-            <com.google.android.material.textview.MaterialTextView
+                android:layout_alignParentStart="true"
+                 />
+        <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/routes_list_cell_difficulty"
                 android:text="Difficulty"
-                android:layout_marginRight="10dp"
-                android:layout_alignBaseline="@id/routes_list_cell_description"
-                android:layout_toLeftOf="@id/routes_list_cell_image"
+                android:layout_marginEnd="40dp"
+                android:layout_marginStart="10dp"
+                android:layout_below="@id/routes_list_cell_name"
+                android:layout_alignParentStart="true"
                 />
-        </RelativeLayout>>
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/routes_list_cell_area"
+            android:text="Area"
+            android:maxLength="15"
+            android:textStyle="bold"
+            android:ellipsize="end"
+            android:layout_below="@id/routes_list_cell_name"
+            android:layout_toEndOf="@id/routes_list_cell_difficulty"/>
+        <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLength="40"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:maxWidth="150dp"
+                android:layout_marginHorizontal="10dp"
+                android:id="@+id/routes_list_cell_description"
+                android:text="Route description"
+                android:textSize="15sp"
+                android:layout_below="@id/routes_list_cell_difficulty"
+                android:layout_alignParentStart="true"/>
+
+        </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
